--- a/index.htm
+++ b/index.htm
@@ -17,7 +17,7 @@
 <p class="p1">&lt;head&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;meta charset="UTF-8"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</p>
-<p class="p1"><span class="Apple-converted-space">  </span>&lt;title&gt;2-Wheeler Dealership Consulting | Auto Edge&lt;/title&gt;</p>
+<p class="p1"><span class="Apple-converted-space">  </span>&lt;title&gt;Auto Edge Consultancy&lt;/title&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;link rel="stylesheet" href="style.css"&gt;</p>
 <p class="p1">&lt;/head&gt;</p>
 <p class="p1">&lt;body&gt;</p>
@@ -37,24 +37,20 @@
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/nav&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;/header&gt;</p>
 <p class="p2"><br></p>
-<p class="p1"><span class="Apple-converted-space">  </span>&lt;section class="hero" style="background: url('https://images.unsplash.com/photo-1503376780353-7e6692767b70') center/cover no-repeat;"&gt;</p>
+<p class="p1"><span class="Apple-converted-space">  </span>&lt;section class="hero"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;div&gt;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>&lt;h1&gt;2-Wheeler Dealership Consulting&lt;/h1&gt;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>&lt;p&gt;Helping motorbike and scooter dealerships thrive in a competitive market.&lt;/p&gt;</p>
+<p class="p1"><span class="Apple-converted-space">      </span>&lt;h1&gt;Driving Dealership Success&lt;/h1&gt;</p>
+<p class="p1"><span class="Apple-converted-space">      </span>&lt;p&gt;Over 30 years of expertise in dealership operations across automobiles, 2-wheelers, and more. We provide end-to-end consulting for growth and excellence.&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">    </span>&lt;/div&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;/section&gt;</p>
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;section&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;h2&gt;Our 2-Wheeler Solutions&lt;/h2&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;div class="services"&gt;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>&lt;div class="card"&gt;&lt;h3&gt;Inventory Optimization&lt;/h3&gt;&lt;p&gt;Balance stock and demand for efficient operations.&lt;/p&gt;&lt;/div&gt;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>&lt;div class="card"&gt;&lt;h3&gt;Customer Experience&lt;/h3&gt;&lt;p&gt;Enhance sales and after-sales experience for riders.&lt;/p&gt;&lt;/div&gt;</p>
-<p class="p1"><span class="Apple-converted-space">      </span>&lt;div class="card"&gt;&lt;h3&gt;Sales Force Training&lt;/h3&gt;&lt;p&gt;Equip your sales teams with product knowledge and techniques.&lt;/p&gt;&lt;/div&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;/div&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;h2&gt;Welcome to Auto Edge Consultancy&lt;/h2&gt;</p>
+<p class="p1"><span class="Apple-converted-space">    </span>&lt;p&gt;Your trusted partner in dealership success in Delhi/NCR and beyond. Explore our services and case studies to see how we deliver measurable impact.&lt;/p&gt;</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;/section&gt;</p>
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;footer&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>© 2025 Auto Edge Consultancy | 2-Wheeler Consulting</p>
+<p class="p1"><span class="Apple-converted-space">    </span>© 2025 Auto Edge Consultancy | Delhi/NCR| Designed with passion to serve efficiency</p>
 <p class="p1"><span class="Apple-converted-space">  </span>&lt;/footer&gt;</p>
 <p class="p1">&lt;/body&gt;</p>
 <p class="p1">&lt;/html&gt;</p>
